# hegg-optics

./: CHANGELOG.md  README.md  flake.nix  hegg-optics.cabal  hegg-optics.nix
.github/workflows/: haskell-ci.yml  test.yml
src/Data/Equality/Graph/: Optics.hs
