cabal-version:        3.0
name:                 hegg-optics
version:              0.1.0.0
synopsis:
  Analogues of the lenses provided by hegg for users of the optics library.

description:
  Provides an @Optics@ module paralleling
  [Data.Equality.Graph.Lens](https://hackage.haskell.org/package/hegg-0.4.0.0/docs/Data-Equality-Graph-Lens.html)
  in [hegg](https://hackage.haskell.org/package/hegg) for users of the
  [optics](https://hackage.haskell.org/package/optics) library.

license:              MIT
license-file:         LICENSE
author:               Eric Meinhardt
maintainer:           ericmeinhardt@gmail.com
copyright:            2023
homepage:             https://github.com/emeinhardt/hegg-optics
bug-reports:          https://github.com/emeinhardt/hegg-optics/issues
category:             Control
build-type:           Simple
extra-doc-files:      CHANGELOG.md

tested-with:
  GHC ==9.6.2
   || ==9.6.1
   || ==9.4.5
   || ==9.2.8

source-repository head
  type:     git
  location: https://github.com/emeinhardt/hegg-optics/hegg-optics.git

common warnings
  ghc-options:
    -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

library
  import:             warnings
  default-language:   GHC2021
  default-extensions: UnicodeSyntax
  hs-source-dirs:     src
  exposed-modules:
    Data.Equality.Graph.Optics
  build-depends:
      base           >= 4.16 && < 5.0
    , hegg           == 0.4.*
    , optics-core    >= 0.4  && < 0.5
    , containers     >= 0.6  && < 0.7
